--- a/package.json
+++ b/package.json
@@ -26,45 +26,51 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
-    "canner-schema-loader": "2.0.10",
-    "canner-script": "2.0.10",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.1",
+    "canner-schema-loader": "3.2.1",
+    "canner-script": "3.2.1",
+    "copy-webpack-plugin": "^5.0.2",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.8.1",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.4",
-    "prettier": "^1.15.2",
+    "mini-css-extract-plugin": "^0.5.0",
+    "prettier": "^1.16.4",
     "style-loader": "^0.23.1",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@canner/antd-components": "^0.5.10",
-    "@canner/container": "^2.0.10",
-    "@canner/history-router": "^2.0.10",
-    "@canner/storage": "^2.0.10",
-    "antd": "3.10.7",
-    "canner": "^2.0.10",
-    "canner-helpers": "^2.0.10",
-    "canner-layouts": "^2.0.10",
-    "firebase": "^5.5.8",
-    "query-string": "^6.2.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "@babel/polyfill": "^7.4.0",
+    "@canner/antd-components": "^0.5.29",
+    "@canner/container": "^3.4.3",
+    "@canner/history-router": "^3.2.1",
+    "@canner/storage": "^3.2.1",
+    "antd": "3.15.2",
+    "canner": "^3.4.3",
+    "canner-graphql-interface": "^2.0.52",
+    "canner-helpers": "^3.2.1",
+    "canner-layouts": "^3.2.1",
+    "firebase": "^5.9.2",
+    "graphql": "^14.2.0",
+    "query-string": "^6.4.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-github-corner": "^2.3.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "slug": "^0.9.2",
-    "styled-components": "^4.1.1"
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "slug": "^1.0.0",
+    "styled-components": "^4.2.0"
   }
 }
